tup/parse/testdata/error/input/expressions.tup
# unclosed tuple literal
_ = (1, 2

# unclosed array literal
_ = [1, 2, 3

# binary expression missing right operand
_ = 1 +

# unclosed block
_ = {
    x = 1
    x

# if expression missing condition
_ = if

# if expression missing then branch
_ = if true

# if expression with block condition missing then branch
_ = if { 1 }

# function call missing closing paren
_ = foo(1, 2

# labeled tuple literal missing colon
_ = (a 1, b: 2, c: 3)

# labeled tuple literal trailing unlabeled member
_ = (a: 1, b: 2, c)

# member access missing field name
_ = user.

# tuple update with unlabeled tuple
_ = user.(1, 2)

# import with identifier instead of string
_ = import(io)

# meta expression missing labeled arguments
_ = $()
